<resources>
    <string name="app_name">NetIncome</string>
    <string name="what_is_your_income_tax_bracket">What is your income tax bracket</string>
    <string name="low_10">Low (10%)</string>
    <string name="medium_15">Medium (15%)</string>
    <string name="high_20">High (20%)</string>
    <string name="round_net_income">Round Net Income</string>
    <string name="calculate">Calculate</string>
    <string name="net_income_0">" Net Income"</string>
</resources>